--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf dist",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js",
     "lint": "eslint --ext .js,.jsx .",
-    "deploy": "npm run clean & npm run build && surge -p .",
+    "deploy": "npm run clean & npm run build & gh-pages -d dist -b gh-pages",
     "export": "spectacle-renderer --delay 3000",
     "start": "cross-env NODE_ENV=development node server.js"
   },
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "deepmerge": "^2.1.1",
+    "gh-pages": "^2.0.1",
     "normalize.css": "8.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -51,6 +52,7 @@
     "file-loader": "^1.1.11",
     "gray-matter": "^4.0.1",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "is-buffer": "^2.0.3",
     "loader-utils": "^1.1.0",
     "markdown-loader": "^3.0.0",
@@ -64,7 +66,6 @@
     "rimraf": "^2.6.2",
     "stringify-object": "^3.2.2",
     "style-loader": "^0.22.0",
-    "surge": "latest",
     "url-loader": "^1.0.1",
     "webpack": "4.16.5",
     "webpack-cli": "^3.1.0",
