--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js",
     "lint": "eslint --ext .js,.jsx .",
     "deploy": "npm run clean & npm run build & gh-pages -d dist -b gh-pages",
+    "gh": "gh-pages -d dist -b gh-pages",
     "export": "spectacle-renderer --delay 3000",
     "start": "cross-env NODE_ENV=development node server.js",
     "pages": "gh-pages -d dist -b gh-pages"
